--- a/Brackets/brackets.reactuser/src/App.css
+++ b/Brackets/brackets.reactuser/src/App.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-	background-image: url(/images/shutterstock.png);
+	background-image: url(/images/banners/shutterstock.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
